fixed toastr on mobile

--- a/src/css/components/_toastr.scss
+++ b/src/css/components/_toastr.scss
@@ -14,6 +14,16 @@
     font-size: 12px;
   }
 
+  @media (max-width: 767px) {
+    .toast-title {
+      font-size: 12px;
+    }
+
+    .toast-message {
+      font-size: 10px;
+    }
+  }
+
 }
 
 #toast-container > div:hover {
